# textora

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.codex/environments/: environment.toml
docs/: ARCHITECTURE.md  DECISIONS.md  PRODUCT.md
docs/features/: TEMPLATE.md  basic-text-editing.md  open-local-file.md  resolve-save-conflict.md  safe-save-core.md  save-as-and-first-save.md  save-opened-file.md
docs/tasks/: TEMPLATE.md  backlog.md  current.md
script/: build_and_run.sh
src/: App.css  App.test.tsx  App.tsx  Editor.test.tsx  Editor.tsx  documentSession.test.ts  documentSession.ts  platform.test.ts  platform.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ipc.rs  lib.rs  main.rs
src-tauri/src/document/: encoding.rs  error.rs  fingerprint.rs  line_ending.rs  mod.rs  save.rs  test_support.rs
