[package]
name = "textora"
version = "0.1.0"
description = "A safe cross-platform desktop text editor"
authors = ["TsingMu"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "textora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# 系统文件对话框，仅暴露单文件选择；前端不获得文件系统、shell 或网络能力。
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
# encoding_rs 提供字符映射；前置成员校验确保其 GBK 超集行为不会放宽 CP936。
# GB18030 四字节序列由本工程的帧结构校验层显式拒绝；解码 had_errors 为真则整体拒绝，不外泄替换字符。
encoding_rs = "0.8"
# 用于文件指纹的稳定内容哈希；std 的 DefaultHasher 不保证跨版本稳定，故使用 SHA-256。
sha2 = "0.10"
# 跨平台比较已打开句柄与路径当前指向的文件，检测读取期间原子替换。
same-file = "1"
